# rust_passvault

./: .env  .gitignore  Cargo.toml  README.md  api_README.md  overal_Api.md  readme.md
resources/firejail/: chromium.profile  firefox.profile  generic.profile
scripts/: setup_postgres.sh
src/: crypto.rs  main.rs  models.rs
src/api/: mod.rs  routes.rs  types.rs  utils.rs
src/api/handlers/: auth.rs  backups.rs  categories.rs  education.rs  export.rs  generator.rs  import.rs  json_api.rs  mod.rs  passwords.rs  privacy.rs  recovery.rs  system.rs  tools.rs
src/api/middleware/: auth.rs  mod.rs
src/backups/: mod.rs
src/cli/: commands.rs  handlers.rs  menu.rs  mod.rs
src/core/: auth.rs  config.rs  mod.rs  vault.rs
src/db/: mod.rs  postgres.rs  sqlite.rs
src/education/: mod.rs
src/firefox/: credentials.rs  mod.rs  nss.rs  profile.rs
src/generators/: mod.rs  password.rs
src/importers/: chrome.rs  csv.rs  edge.rs  firefox.rs  mod.rs
src/logging/: mod.rs
src/privacy/: levels.rs  mod.rs  profiles.rs
src/privacy/browsers/: common.rs  firefox.rs  mod.rs
src/privacy/fingerprint/: mod.rs
src/privacy/network/: dns.rs  mod.rs
src/privacy/storage/: mod.rs
src/recovery/: mod.rs
src/system/: firejail.rs  mod.rs
src/tools/: dork.rs  mod.rs
src/utils/: format.rs  io.rs  mod.rs
